# quic-cid-flood-attack

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  PAPER_TEMPLATE.md  README.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
config/: lab.toml
results/: exp01.csv  exp02.csv  exp03.csv  exp_both.csv  experiment.csv  t1.csv  t2.csv  t3.csv
src/: cid.rs  config.rs  lib.rs  main.rs
src/attack/: frame_flood.rs  mod.rs  raw_flood.rs
src/metrics/: collector.rs  exporter.rs  mod.rs
src/utils/: cid_gen.rs  mod.rs
tests/: integration_test.rs
