[package]
name    = "quic-cid-flood-lab"
version = "0.1.0"
edition = "2021"
authors = ["Academic Security Lab"]
description = "QUIC CID Flooding stress-test tool for academic research"

[[bin]]
name = "quic-cid-flood-attack"
path = "src/main.rs"

[lib]
name = "quic_cid_flood_lab"
path = "src/lib.rs"

[dependencies]
tokio             = { version = "1",    features = ["full"] }
quinn             = "0.11"
rustls            = { version = "0.23", features = ["ring"] }
rand              = "0.8"
clap              = { version = "4",    features = ["derive"] }
serde             = { version = "1",    features = ["derive"] }
toml              = "0.8"
csv               = "1.3"
chrono            = { version = "0.4",  features = ["serde"] }
anyhow            = "1"
tracing           = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = 3
lto       = true
codegen-units = 1
